--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-7" data-bg-video="https://www.youtube.com/embed/3SH3CPJhthE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-7" data-bg-video="https://www.youtube.com/embed/3SH3CPJhthE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="0qvgG30iBKvOGEe1D6dchNsvN6UjnUAQxLvzo0yBsAbJIUwZ2Stx/w7x6/JTMj1ZHXro95U4OtXvQFFaseg3fSivvCauA4KPmrB9dc5Ub/jBvaAa08LxzTxmkwa7DUH+" data-form-email="true">
+                    <input type="hidden" value="L1k45gqsFZUw/e6c052I5qSfEJKzifaXp68x2vCHx9mXr1kYnHpbAh7DA5x1JvToSbGZojicuHK6RxntWTdvsWMqozliF8/U5kaymX0T4EZ7Nwp7dlexbqLwk4PPppmM" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
