--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-h" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-h" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -76,7 +76,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="pKd+viAFvpeDc5uKU9tDbKzdeISl58KsBB8LplOmUF4vqoDZ4VAsmmynJKuhTYqcJmndJ4vrKMOFSj55k18vUQ5HGz7OOpq7038e/HouRQc4JA6Z/xCaWXbNx+4vaerA" data-form-email="true">
+                    <input type="hidden" value="oG26ditxBTg7C0C13S2pU8OMv5qlRC2qBZVIQrK4XriG6RA+Iz73yPVPVfeuqt1ir2eU1BJipIoeMa86ayhhJW8JcP/jVA+MUwoYnePD81hg+Qyp/POrQQTYbaqHyDQg" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-h-email">Email<span class="form-asterisk">*</span></label>
