--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-7" data-bg-video="https://www.youtube.com/embed/3SH3CPJhthE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-7" data-bg-video="https://www.youtube.com/embed/3SH3CPJhthE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="TY42dgAnmYrvVaFo/5th9FyHuvjcApt4NKbRmkpXXv7NsB8wFjpn1v/S6dxqF3lcJrHXCx8vHV+epYBFWqRIPZYiwiD9z+hxzPj1RqbR1NR2HE4sSI3pwIoGxY60dt1M" data-form-email="true">
+                    <input type="hidden" value="i4qW9FHMXx1mNFuOicmdi7YulXA1okJUc3H/ahr2fuQ5r+HIWeUiwCAaFfX0rKFAkFafk7LkCcs2xK5Qtm0LZ0lpc+vLUHL+YM32cvtnWmNFGTX87f6N6n7YC+vYZ61y" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
