--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-h" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-h" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -76,7 +76,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="UorTNoEA/zqN9EPHuFV82BzTHOTtebR75vIon2t1KRml6b6/I+ej6d45Vqu9YhSS9MoD1svTgb8XkkR0whv4wZc7P0YDkb6rb2lzNxUyLVS8kTt1aVQ+vC1ZsS79c1Ki" data-form-email="true">
+                    <input type="hidden" value="xF+sVke4B0Qz9J+MiL4UmztyQVKhnKGiFw0aHzszJWyqnNtXO0osJtOHLebURYzRnwvFzvXb93xFfdD7P2vC7DGDxiyVe7zj1tAeuRyF//xrWbcIHKqBQ5r1+jPpKUC8" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-h-email">Email<span class="form-asterisk">*</span></label>
