--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-384x128.jpg" type="image/x-icon">
   <meta name="description" content="Site Maker Description">
-  <title>Index</title>
+  <title>Julian Guzman</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -207,7 +207,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="phq+Mf7x8k+kwA/mVZ7mOj4da7YIZY76CKA2hbCNudDz4w+GV0GS22rWbCWihOOw4R3t/gSP0pAChHyfEgk0u+rvopWXwUx0YDxTSozD2jb021Kq+zdYXFzMMtmWqZm4" data-form-email="true">
+                    <input type="hidden" value="RcYb9zqapZBdMgRcF615q5vr3fqT1vSOu5PAgFpT6WTOWfSkHY7no9FHVVTKYJ/JvDyjZQM2JBli4J1ZY1uIlnGUNfvCQ2ClE4kDGBiWMMuNXMc110kWbZk8CjS3mO+k" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
