--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -181,7 +181,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">FOLLOW US</h3>
+                <h3 class="mbr-section-title display-2">FOLLOW ME</h3>
                 <div>   <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCY7en4humahJoBSgptRGpiw"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/mobirise/"><i class="socicon socicon-instagram"></i></a>      </div>
             </div>
         </div>
@@ -207,7 +207,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="RcYb9zqapZBdMgRcF615q5vr3fqT1vSOu5PAgFpT6WTOWfSkHY7no9FHVVTKYJ/JvDyjZQM2JBli4J1ZY1uIlnGUNfvCQ2ClE4kDGBiWMMuNXMc110kWbZk8CjS3mO+k" data-form-email="true">
+                    <input type="hidden" value="MdiavVGN2XZzF0eMhIQkw0zNGWx1IZdmSkHjdRVwmg2bHOhSjpsvtG8D6jeJKvoKxVoyvt6tJe4KH9nlQXTcjEGRMlX0pO6Av31f7d7aAHcBtMW3OY1UON2nfPwmk7DC" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
