--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -207,7 +207,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="s6JwJvmAbYN+SaSne1j86Woe01IJD1Dq++5dpTtDTHIJx29wrRi6xRhvQL3cfwi/SCYyT6oaHFtoeIdLxPuTG0bJDvTNZaK4JtYB6eUcTRzTVM3cHjnRW5e/No3hG1Di" data-form-email="true">
+                    <input type="hidden" value="PXc48o2PTgWUCvzocRGBXedlfG92NepmGMod6cznNrDfrYTZuMtP8I8rNRY4Lz3TmF0Y3jAZVyBdshnEAJNjeujeuqB/8yiFEm1pA0BvzLpVeIXyc/04R3Drcg/kkL9f" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
