--- a/page3.html
+++ b/page3.html
@@ -68,7 +68,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="xmBA6OfH1/gUCrxTVZF/TM/pWAzWs2sXRnjfjji2u8RIerf0ZSY/kHW9k7SFov1JOvbLnUEGolsZJFDCXL3L6GSM8WwK21R2BxphVD4bfVucKt3INPWYee7XOcI+pRva" data-form-email="true">
+                    <input type="hidden" value="OsRJgzLrWOIkqY1/uvU01z1eEw6UD1+PspznBGSrdHFBGzGUYYQVk2/+iyANr8Olt6mOj2opOFCoumdn7GJdPtTKhERIzyEVS2z2kuILzqcbU5kHAkz2v0HpnX0/rsJ9" data-form-email="true">
 
                     
 
@@ -93,7 +93,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
