--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -207,7 +207,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="34F5symdsn4QanY50zwCITjQza2AqOou/AqArCb03BOTvheI1yiMLsTwp2hYFTmPwj40eX8l0f47jv2fQKjslx1UBJuU0eF+O/6GGzSnqj46Lb+6OkRw3W5gYypdwTTN" data-form-email="true">
+                    <input type="hidden" value="aOxGe+M7ER+ZL1WvHbcnmyzguCW28i/SjQ9p18uViBZoQ++pYvgdGr6Z5JkhE7tqFDItRwEV5KJVgxRtCLoiKLuz9HN1PzR4Kf8t8OWwH0fW7swp8a5Wiyd5nbPjESs2" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
