create github pages

--- a/page3.html
+++ b/page3.html
@@ -68,7 +68,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="gogl4JQODYr8I4BqJf4bhgnUychFvbDWQD5tbmu1u3D2LN0ufm+ZPL+QroEtJYtFt4175UB8PobBP7xCVfW9Th46B+mBVS/CvQB1P9RTm8W94f2pOMUg0AuEkxbpy/hv" data-form-email="true">
+                    <input type="hidden" value="ZrfxRtZBT96EFUgwUzGHfqHRK3dsie+iHT7C3M/wbzQZu4xRNyjvb34IwEh8v7SP7xYKvJ2c8HRym4dnfNnaxHRVyxSayxH//vt6As9vspzqhaZZJ5YWH/JOoI+zQgz9" data-form-email="true">
 
                     
 
@@ -93,7 +93,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
