create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -207,7 +207,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="bOHL1SYhwBceD5yXbOlBYnwOGwKBwp7BIpj7aGJrnoFU9RDj10VWOU75g8muQ5Tmlai0ZmjMqZ6kX5qCBQS7uv9yYFM9IBfDhOsNs/bKnO5PAqVZHDNELovOmOVKkjH5" data-form-email="true">
+                    <input type="hidden" value="LGsLlySV5CK3nE6KGPcgik6Q/m/Jxvup6N50YYveZmPQFLFszCX+76j9++5kNvApgAvZ7laTzMpN4Gy/YoSHdek+4Xidk8n2SLR0G5ITbQMKUFQmz1DUAepAxMfciwus" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
