--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-18" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -207,7 +207,7 @@ Email: jguzman@miamiartsstudio<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="dI4FDQ0hB17pdKHtbiuBvVkKDKKeGdQboq4BkOuTrRYDYrc3gI9CxM8aqltOYKm4zA7l0YUBSPz+JV+N53uQsn8mGpgXbEL7sj+dlrEactmTu+qITlgnVQPQowTLdh47" data-form-email="true">
+                    <input type="hidden" value="ND0cI+GGlrh8FIv0TEUVl4nSfYEINSFD9FKND2GVobRGZNBUwhWOYjgR8mO5vgRqozF7NgXXhM9pLn2QCLXq3ohAs4uco55eEMN7As50UyqKRcJYtIl5/pXFQXE0MMDn" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-f-email">Email<span class="form-asterisk">*</span></label>
