create github pages

--- a/page3.html
+++ b/page3.html
@@ -68,7 +68,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="m8H5YuVZ1rebhS+WgTp8AfvZS8UEJ7yQin/+gg3oNcd70RdPX31OlYil2CU2Rb8hL/SY2+bHIQin9ZoKAjgSiMLmXji6tjdKeq1c/tljWXKY8GnkzxU4lzdeRLscPH05" data-form-email="true">
+                    <input type="hidden" value="udDppNdqQMm1OcRIf4uOtO7CcwnQ6bLw2zjRsXT6wXjViF80LaDEUXz1cNDjSYOH1THnaZvGtTAJgBaiJYHRETSc9PKV5MRud5mfb5uANwdO5mFkiO2ugF9m1ECBLvnT" data-form-email="true">
 
                     
 
@@ -93,7 +93,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">top html web site building software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">simple responsive web page builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
