--- a/page3.html
+++ b/page3.html
@@ -68,7 +68,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="X5YUdao2JV+8QdWL1KmLY7r/vD6enh41/IXKG2DLj+ler4QgTckETEiVpo3x3NeccEN+kf8rbF1r8YFiR7E2Wx4YUHQVuITJUhbo43RKS90Mj8sRcaVSOH+Leh7QjVJR" data-form-email="true">
+                    <input type="hidden" value="mNmLieryosqpDvjFl0hZXkDdf0VyPOArqsfaMD1lgijK3czapj8MZYOi+aRfBBZEtp4hmELyOgOLSFEuVHiOZ7WyEfix8PujcMo3zKce7DWmJBFdn2XXz1f8g1WRQ6yW" data-form-email="true">
 
                     
 
@@ -93,7 +93,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">drag and drop site builder software download</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">simple offline web maker software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
