--- a/page4.html
+++ b/page4.html
@@ -167,7 +167,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free offline web generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery1-1s" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web development software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery1-1s" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
